@@ -18,6 +18,7 @@
 
 package org.apache.beam.sdk.extensions.sql.impl.interpreter.operator.math;
 
+import com.google.common.collect.ImmutableMap;
 import java.util.ArrayList;
 import java.util.List;
 import org.apache.beam.sdk.extensions.sql.impl.interpreter.BeamSqlFnExecutorTestBase;
@@ -69,61 +70,77 @@ public class BeamSqlMathBinaryExpressionTest extends BeamSqlFnExecutorTestBase {
     // round(double, double) => double
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 2.0));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 4.0));
-    Assert.assertEquals(2.0, new BeamSqlRoundExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        2.0,
+        new BeamSqlRoundExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
     // round(integer,integer) => integer
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.INTEGER, 2));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.INTEGER, 2));
-    Assert.assertEquals(2, new BeamSqlRoundExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        2, new BeamSqlRoundExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
 
     // round(long,long) => long
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.BIGINT, 5L));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.BIGINT, 3L));
-    Assert.assertEquals(5L, new BeamSqlRoundExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        5L, new BeamSqlRoundExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
 
     // round(short) => short
     operands.clear();
-    operands.add(BeamSqlPrimitive.of(SqlTypeName.SMALLINT, new Short("4")));
+    operands.add(BeamSqlPrimitive.of(SqlTypeName.SMALLINT, Short.valueOf("4")));
     Assert.assertEquals(
         SqlFunctions.toShort(4),
-        new BeamSqlRoundExpression(operands).evaluate(row, null).getValue());
+        new BeamSqlRoundExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
 
     // round(long,long) => long
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.BIGINT, 2L));
-    Assert.assertEquals(2L, new BeamSqlRoundExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        2L, new BeamSqlRoundExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
 
     // round(double, long) => double
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 1.1));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.BIGINT, 1L));
-    Assert.assertEquals(1.1, new BeamSqlRoundExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        1.1,
+        new BeamSqlRoundExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
 
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 2.368768));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.INTEGER, 2));
-    Assert.assertEquals(2.37, new BeamSqlRoundExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        2.37,
+        new BeamSqlRoundExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
 
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 3.78683686458));
-    Assert.assertEquals(4.0, new BeamSqlRoundExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        4.0,
+        new BeamSqlRoundExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
 
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 378.683686458));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.INTEGER, -2));
-    Assert.assertEquals(400.0, new BeamSqlRoundExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        400.0,
+        new BeamSqlRoundExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
 
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 378.683686458));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.INTEGER, -1));
-    Assert.assertEquals(380.0, new BeamSqlRoundExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        380.0,
+        new BeamSqlRoundExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
 
     // round(integer, double) => integer
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.INTEGER, 2));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 2.2));
-    Assert.assertEquals(2, new BeamSqlRoundExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        2, new BeamSqlRoundExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
 
     // operand with a BeamSqlInputRefExpression
     // to select a column value from row of a row
@@ -133,7 +150,8 @@ public class BeamSqlMathBinaryExpressionTest extends BeamSqlFnExecutorTestBase {
     operands.add(BeamSqlPrimitive.of(SqlTypeName.BIGINT, 2L));
 
     Assert.assertEquals(
-        1234567L, new BeamSqlRoundExpression(operands).evaluate(row, null).getValue());
+        1234567L,
+        new BeamSqlRoundExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
   }
 
   @Test
@@ -144,42 +162,55 @@ public class BeamSqlMathBinaryExpressionTest extends BeamSqlFnExecutorTestBase {
 
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 2.0));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 4.0));
-    Assert.assertEquals(16.0, new BeamSqlPowerExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        16.0,
+        new BeamSqlPowerExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
     // power(integer,integer) => long
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.INTEGER, 2));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.INTEGER, 2));
-    Assert.assertEquals(4.0, new BeamSqlPowerExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        4.0,
+        new BeamSqlPowerExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
     // power(integer,long) => long
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.INTEGER, 2));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.BIGINT, 3L));
-    Assert.assertEquals(8.0, new BeamSqlPowerExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        8.0,
+        new BeamSqlPowerExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
 
     // power(long,long) => long
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.BIGINT, 2L));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.BIGINT, 2L));
-    Assert.assertEquals(4.0, new BeamSqlPowerExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        4.0,
+        new BeamSqlPowerExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
 
     // power(double, int) => double
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 1.1));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.INTEGER, 1));
-    Assert.assertEquals(1.1, new BeamSqlPowerExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        1.1,
+        new BeamSqlPowerExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
 
     // power(double, long) => double
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 1.1));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.BIGINT, 1L));
-    Assert.assertEquals(1.1, new BeamSqlPowerExpression(operands).evaluate(row, null).getValue());
+    Assert.assertEquals(
+        1.1,
+        new BeamSqlPowerExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
 
     // power(integer, double) => double
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.INTEGER, 2));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 2.2));
     Assert.assertEquals(
-        Math.pow(2, 2.2), new BeamSqlPowerExpression(operands).evaluate(row, null).getValue());
+        Math.pow(2, 2.2),
+        new BeamSqlPowerExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
   }
 
   @Test
@@ -188,13 +219,15 @@ public class BeamSqlMathBinaryExpressionTest extends BeamSqlFnExecutorTestBase {
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 2.0));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 4.0));
     Assert.assertEquals(
-        2.0, new BeamSqlTruncateExpression(operands).evaluate(row, null).getValue());
+        2.0,
+        new BeamSqlTruncateExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
     // truncate(double, integer) => double
     operands.clear();
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 2.80685));
     operands.add(BeamSqlPrimitive.of(SqlTypeName.INTEGER, 4));
     Assert.assertEquals(
-        2.8068, new BeamSqlTruncateExpression(operands).evaluate(row, null).getValue());
+        2.8068,
+        new BeamSqlTruncateExpression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
   }
 
   @Test
@@ -204,6 +237,6 @@ public class BeamSqlMathBinaryExpressionTest extends BeamSqlFnExecutorTestBase {
     operands.add(BeamSqlPrimitive.of(SqlTypeName.DOUBLE, 0.56));
     Assert.assertEquals(
         Math.atan2(0.875, 0.56),
-        new BeamSqlAtan2Expression(operands).evaluate(row, null).getValue());
+        new BeamSqlAtan2Expression(operands).evaluate(row, null, ImmutableMap.of()).getValue());
   }
 }
